chenge image name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="section-divider-wo-dash"></div>
         <div class="intro-content">
             <div class="image-name-container">
-                <img src="src/E-yantra.jpg" alt="Profile Picture" class="profile-pic">
+                <img src="src/profile_photo.jpg" alt="Profile Picture" class="profile-pic">
                 <h2>Righas Panneerselvam</h2>
             </div>
             <div class="intro-text">
