--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
                 <li><a href="#achievements">Achievements</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <!-- <li><a href="#certifications">Certifications</a></li> -->
             </ul>
         </nav>
     </header>
@@ -117,14 +118,15 @@
                 </div>
                 <p class="experience-role">SoC Design Verification Intern - Boot Team</p>
                 <ul class="experience-details">
-                    <li>Integrated BPMPSWSIM (Arm Cortex R5 model) into lower integration TBs</li>
-                    <li>Performed CPS performance analysis, reducing impact from 19.2% to 2.95% through optimizations</li>
-                    <li>Developed verification infrastructure for upcoming server-class CPU chips</li>
-                    <li>Prototyped alternative CPU boot flow currently under architectural review</li>
+                    <li>Integrated BPMPSWSIM (Arm Cortex R5 model) into lower TBs and did CPS performace analysis</li>
+                    <li>reduced impact from 19.2% to 2.95% through optimizations</li>
+                    <li>The optimised BPMPSWSIM is implemented in the current Boot infrastructure</li>
+                    <li>Developed new Boot verification infrastructure(by deleting the need for BPMPSWSIM) for upcoming server-class CPU chips</li>
+                    <li>The alternative CPU boot flow is currently under review</li>
                 </ul>
                 <div class="experience-learnings">
                     <strong>Key Technologies:</strong> 
-                    SystemVerilog, UVM, C++, Python, Perl, JasperGold, VCS
+                    Digital Design and Verification of SoC, Verilog, UVM, C++, Python, Perl, VCS, Communication
                 </div>
             </div>
 
@@ -148,7 +150,7 @@
         </div>
     </section>
 
-    <section id="certifications">
+    <!-- <section id="certifications">
         <h2>Certifications</h2>
         <div class="section-diver-wo-dash"></div>
         <div class="certifications-container">
@@ -163,7 +165,7 @@
             <div>Certification 9</div>
             <div>Certification 10</div>
         </div>
-    </section>
+    </section> -->
 
     <section id="skills">
         <h2>Technical Skills</h2>
