changes to technical skills

--- a/index.html
+++ b/index.html
@@ -170,44 +170,15 @@
     <section id="skills">
         <h2>Technical Skills</h2>
         <div class="section-divider-wo-dash"></div>
-        <div class="skills-container">
-            <details class="skill-category">
-                <summary class="skill-heading">
-                    Programming Languages
-                    <span class="dropdown-arrow">▼</span>
-                </summary>
-                <div class="skill-list">
-                    <span>Verilog</span>
-                    <span>System Verilog</span>
-                    <span>C</span>
-                    <span>C++</span>
-                    <span>Python</span>
-                    <span>MATLAB</span>
-                    <span>Perl</span>
-                    <span>Assembly RV32</span>
-                    <span>CSS</span>
-                    <span>HTML</span>
-                    <span>JS</span>
-                </div>
-            </details>
-
-            <details class="skill-category">
-                <summary class="skill-heading">
-                    Design and Simulation Tools
-                    <span class="dropdown-arrow">▼</span>
-                </summary>
-                <div class="skill-list">
-                    <span>Quartus Prime</span>
-                    <span>Modelsim</span>
-                    <span>Cadence</span>
-                    <span>Proteus</span>
-                    <span>LTspice</span>
-                    <span>emu8086</span>
-                    <span>Vivado</span>
-                    <span>Fusion 360</span>
-                    <span>Matlab</span>
-                </div>
-            </details>
+        <div class="skills-grid">
+            <div class="skill-category">
+                <h3 class="skill-heading">Programming Languages</h3>
+                <p class="skill-text">Verilog, SystemVerilog, C, C++, Python, MATLAB, Perl, Assembly RV32, CSS, HTML, JS</p>
+            </div>
+            <div class="skill-category">
+                <h3 class="skill-heading">Design and Simulation Tools</h3>
+                <p class="skill-text">Quartus Prime, ModelSim, Cadence, Proteus, LTspice, emu8086, Vivado, Fusion 360, MATLAB</p>
+            </div>
         </div>
     </section>
 
