--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="about" class="glass-container">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-pic">
+            <img src="src/myphoto.jpg" alt="Profile Picture" class="profile-pic">
             <p class="sub-tab no-hover">
                 I’m an electronics enthusiast and embedded systems developer, currently exploring areas from antenna design to AI hardware integration. I enjoy working on hands-on projects like microcontroller-based robots, radar sensor integration, and CPU design in Verilog. My focus is on building efficient, well-optimized systems while experimenting with new tech in hardware and software.
             </p>
