projects yet to be added

--- a/index.html
+++ b/index.html
@@ -76,6 +76,35 @@
                 <h4>32X8 SRAM Memory Array</h4>
                 <p id="project-detail">Designed a 256 Bit SRAM Memory model in Cadence Virtuoso. The fabric of 32X8 bit cells hold the total of 32 ASCII characters.</p>
             </div>
+            <div class="project-tile" data-project="3">
+                <!-- <img src="project3.jpg" alt="Project 3" class="project-img"> -->
+                <h4>Projects which are yet to be added</h4>
+                <div class="section-divider-wo-dash"></div>
+                <li>Custom D_FF with Transmission gate Design in Cadence</li>
+                <li>Custom Drone with Original flight controller</li>
+                <li>2N2222 FM Tx at 101MHz and 12m range</li>
+                <li>Aragog Spider Bot with 6 DoF</li>
+            </div>
+            <!-- <div class="project-tile" data-project="3">
+                <img src="src/D_FF.png" alt="Project 3" class="project-img">
+                <h4>Transmission Gate D_FF</h4>
+                <p id="project-detail">Designed a D Flip Flop in Master Slave Config with Transmission Gates.</p>
+            </div>
+            <div class="project-tile" data-project="4">
+                <img src="src/Drone.jpg" alt="Project 4" class="project-img">
+                <h4>Custom Flight Controller</h4>
+                <p id="project-detail">Designed a D Flip Flop in Master Slave Config with Transmission Gates.</p>
+            </div>
+            <div class="project-tile" data-project="5">
+                <img src="src/FM_Tx.png" alt="Project 5" class="project-img">
+                <h4>FM Trnasmitter</h4>
+                <p id="project-details">2N2222 Trnasistor based FM Trnasmitter</p>
+            </div>
+            <div class="project-tile" data-project="6">
+                <img src="project6.jpg" alt="Project 6" class="project-img">
+                <h4>Aragog Spider Bot</h4>
+                <p id="project-details">Aragog Spider Bot</p>
+            </div> -->
             <!-- <div class="project-tile" data-project="3">
                 <img src="project3.jpg" alt="Project 3" class="project-img">
                 <h4>IoT Home Automation</h4>
