Images and changes to index files

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     
             <!-- RIGHT : Images -->
             <div class="achievement-gallery">
-                <img src="src/ach1.jpg" class="achievement-img" alt="Achievement 1">
-                <img src="src/ach2.jpg" class="achievement-img" alt="Achievement 2">
-                <img src="src/ach3.jpg" class="achievement-img" alt="Achievement 3">
-                <img src="src/ach4.jpg" class="achievement-img" alt="Achievement 4">
-                <img src="src/ach5.jpg" class="achievement-img" alt="Achievement 5">
+                <img src="src/Workshop_3.JPG" class="achievement-img" alt="Achievement 1">
+                <img src="src/Workshop_2.JPG" class="achievement-img" alt="Achievement 2">
+                <img src="src/E-yantra.jpg" class="achievement-img" alt="Achievement 3">
+                <img src="src/Meshmerize.jpg" class="achievement-img" alt="Achievement 4">
+                <!-- <img src="src/ach5.jpg" class="achievement-img" alt="Achievement 5"> -->
             </div>
         </div>
     </section>
