--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </div>
 
     <header id="header" class="glass-container">
-        <h1>Righas Panneerselvam</h1>
+        <h1>Righas's Portfolio</h1>
         <nav>
-            <a href="#about">About</a>
+            <a href="#about">About Me</a>
             <a href="#achievements">Achievements</a>
             <a href="#projects">Projects</a>
             <a href="#experience">Experience</a>
@@ -38,15 +38,19 @@
 
     <!-- ABOUT -->
     <section id="about" class="glass-container">
-        <h2>About Me</h2>
+        <!-- <h2>About Me</h2> -->
         <div class="about-content">
-            <img src="src/myphoto.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="src/myphoto.jpg" alt="Profile Picture" class="profile-pic">
+        <h2>Righas Panneerselvam</h2>
+        <div class="about-text">
+            <h2>SoC Full Stack (n) Web Front End Engineer</h2>
             <p class="sub-tab no-hover">
                 I am a final-year B.Tech student in Electronics and Communication Engineering at NIT Trichy, with a strong interest in the design and verification of silicon products. 
                 I enjoy tackling challenging problems, so I participate in various hardware competitions and hackathons. 
                 As a member of Spider R&D, I actively manage multiple teams and contribute to diverse projects. 
                 I am seeking full-time opportunities in electronics, embedded systems, and silicon design and verification.
             </p>
+        </div>
         </div>
     </section>
 
