about me page changing

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
     <section id="about" class="glass-container">
         <!-- <h2>About Me</h2> -->
         <div class="about-content">
+        <div class="about-photo-name">
         <img src="src/myphoto.jpg" alt="Profile Picture" class="profile-pic">
-        <h2>Righas Panneerselvam</h2>
+        <h2>Righas</h2>
+        <h2>Panneerselvam</h2>
+        </div>
         <div class="about-text">
             <h2>SoC Full Stack (n) Web Front End Engineer</h2>
             <p class="sub-tab no-hover">
