--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <div class="about-content">
         <div class="about-photo-name">
         <img src="src/myphoto.jpg" alt="Profile Picture" class="profile-pic">
-        <h2>Righas</h2>
-        <h2>Panneerselvam</h2>
+        <h2>Righas Panneerselvam</h2>
         </div>
         <div class="about-text">
             <h2>SoC Full Stack (n) Web Front End Engineer</h2>
